@@ -114,7 +114,7 @@ ItemView::ItemView( ItemDocument * itemDocument, ViewContainer *viewContainer, u
 	
 	//BEGIN Draw actions
 	//KToolBarPopupAction * pa = new KToolBarPopupAction( i18n("Draw"), "paintbrush", 0, 0, 0, ac, "edit_draw" );
-	KToolBarPopupAction * pa = new KToolBarPopupAction( KIcon("paintbrush"), i18n("Draw"), ac);
+	KToolBarPopupAction * pa = new KToolBarPopupAction( KIcon("draw-brush"), i18n("Draw"), ac);
     pa->setName("edit_draw");
 	pa->setDelayed(false);
     ac->addAction("edit_draw", pa);
